Removed commons-codec dependency